tests/semantic_cases/invalid/undeclared_assignment_target.ob0
MODULE Main;
BEGIN
  y := 1;
END Main.
